# cookiecutter-allpurpose-minimal-python

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: CONTRIBUTING.md  README.md  logger.py  main.py  pyproject.toml
{{cookiecutter.project_name}}/config/: app_config.yaml
{{cookiecutter.project_name}}/notebooks/: README.md
{{cookiecutter.project_name}}/scripts/bash/: README.md
{{cookiecutter.project_name}}/scripts/py/: README.md
{{cookiecutter.project_name}}/src/: __init__.py  sample.py  utils.py
{{cookiecutter.project_name}}/tests/: test_sample.py
